--- a/dissertation_backend/package.json
+++ b/dissertation_backend/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^8.1.1",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "bignumber.js": "^9.0.1",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -34,7 +36,8 @@
     "mongoose": "^6.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "web3": "^1.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
