--- a/dissertation_client/package.json
+++ b/dissertation_client/package.json
@@ -13,9 +13,14 @@
     "bignumber.js": "^9.0.1",
     "dayjs": "^1.10.7",
     "ethers": "^5.5.1",
+    "i18next": "^21.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.13.0",
     "react-qr-code": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
