--- a/dissertation_client/.env
+++ b/dissertation_client/.env
@@ -1,1 +1,2 @@
-REACT_APP_CORE_API=http://localhost:3001
+# REACT_APP_CORE_API=http://localhost:3001
+REACT_APP_CORE_API=https://backend-temp-uit.herokuapp.com
